Doc/force-app/main/default/objects/Advances_Productivity_Snapshot_2__c/Advances_Productivity_Snapshot_2__c.object-meta.xml
<CustomObject>
    <description>Target object for &apos;Advances Productivity Snapshot&apos;</description>
    <label>Advances Productivity Snapshot 2</label>
    <nameField>
        <label>Advances Productivity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advances Productivity Snapshots 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>