Doc/force-app/main/default/objects/Advances_Productivity_Snapshot_2__c/fields/Last_Modified_By_OPC__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_OPC__c</fullName>
    <label>Last Modified By (OPC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>