Doc/force-app/main/default/objects/Advances_Productivity_Snapshot_2__c/fields/List_Price_Recurring_OPC__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Recurring_OPC__c</fullName>
    <label>List Price Recurring (OPC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>