Doc/force-app/main/default/objects/Advances_Productivity_Snapshot_2__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>