Doc/force-app/main/default/objects/Advances_Productivity_Snapshot_2__c/fields/Sale_Category__c.field-meta.xml
<CustomField>
    <fullName>Sale_Category__c</fullName>
    <label>Sale Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>